# TestClassWrap

./: .gitignore  .npmrc  CMakeLists.txt  PUBLISHING.md  README.md  SUMMARY.md  USAGE.md  binding.gyp  copy-binary.js  examples.js  index.js  mesh_test.js  package.json  pnpm-lock.yaml  setup-auth.js  test.js
cpp/: IntegerContainer.cpp  IntegerContainer.h  MeshHandler.cpp  MeshHandler.h
src/: IntegerContainerWrapper.cpp  IntegerContainerWrapper.h  index.cpp
